--- a/templates/account/verification_sent.html
+++ b/templates/account/verification_sent.html
@@ -5,8 +5,8 @@
 {% block head_title %}{% trans "Verify Your E-mail Address" %}{% endblock %}
 
 {% block content %}
-    <h1>{% trans "Verify Your E-mail Address" %}</h1>
+    <h1 style="color:rgb(250,244,209)">{% trans "Verify Your E-mail Address" %}</h1>
 
-    <p>{% blocktrans %}Enviamos um e-mail de verificação para você. Acesse o link fornecido para finalizar o processo de cadastro. Contacte-nos se não o receber dentro de alguns minutos.{% endblocktrans %}</p>
+    <p style="color:rgb(250,244,209)">{% blocktrans %}Enviamos um e-mail de verificação para você. Acesse o link fornecido para finalizar o processo de cadastro. Contacte-nos se não o receber dentro de alguns minutos.{% endblocktrans %}</p>
 
 {% endblock %}
