--- a/templates/password/password_reset.html
+++ b/templates/password/password_reset.html
@@ -7,10 +7,10 @@
 
 	<!--Reset Password-->
 	<div class="container p-5">
-  	 	<h2 class="font-weight-bold mt-3">Redefinição de Senha</h2>
+  	 	<h2  style="color:rgb(250,244,209)" class="font-weight-bold mt-3">Redefinição de Senha</h2>
 		<hr>
-		<p>Esqueceu sua senha? Coloque seu e-mail abaixo, e nós mandaremos um e-mail com instruções para mudar sua senha.</p>
-        <form method="POST">
+		<p style="color:rgb(250,244,209)">Esqueceu sua senha? Coloque seu e-mail abaixo, e nós mandaremos um e-mail com instruções para mudar sua senha.</p>
+        <form  style="color:rgb(250,244,209)" method="POST">
             {% csrf_token %}
             {{ password_reset_form|crispy }}                    
             <button class="btn btn-primary" type="submit">Enviar E-mail</button>
