--- a/templates/radio_2.html
+++ b/templates/radio_2.html
@@ -18,8 +18,8 @@
 
 .label-description{
 
-    -webkit-text-stroke: 0.7px #4c51ff!important;
-    color: white;
+    /*-webkit-text-stroke: 0.7px #red!important;*/
+    color: black;
     font-family: "Papyrus",fantasy;
     font-size: x-large;
     font-weight: bold;
@@ -27,15 +27,11 @@
 }
 
 </style>
-
-
-
-
     <form action="" method="POST">
         {% csrf_token %}
 
         <div class="col-md-12">
-            <div style="background-color: rgb(236, 236, 236); border-radius: 3px; box-shadow: 1,1,1,1;text-align: center;margin-top: 50px; padding-bottom: 50px;  "
+            <div style="background-color: rgb(250,244,209); border-radius: 3px; box-shadow: 1,1,1,1;text-align: center;margin-top: 50px; padding-bottom: 50px;  "
                 class="home-ground ">
                 <div class="bg-w">
         <h1 class='label-description tituler'>Build your Character</h1>
