Alteração do display das fichas
Display de fichas realizado através de cards.

--- a/templates/home.html
+++ b/templates/home.html
@@ -12,24 +12,23 @@
         class="home-ground ">
         
         <div class="col-md-12">
-            <div style="background-color: rgb(250,244,209); border-radius: 3px; box-shadow: 1,1,1,1;text-align: center;  "
+            <div style="background-color: transparent; border-radius: 3px; box-shadow: 1,1,1,1;text-align: center; ; "
             class="home-ground ">
-            {% for item in value %}
-            
-           
-            <div style="background-color: rgb(250,244,209);
-            border: 1px solid white;">
-            <br>
-
-
-                <a href="/sheet/{{ item.id }}" class="" style=""><span style="color: white ;-webkit-text-stroke: 0.7px #4c51ff!important;">{{ item.name }}</span> <br>race: {{ item.race }}<br> class: {{ item.clas }}/level: {{ item.level }}</a>
-                <br>
-                <br>
+            <div class="row row-cols-1 row-cols-md-2 g-4">
+                {% for item in value %}
+                    <div class="col">
+                        <div class="card" style="background-color: rgb(250,244,209); font-family: Papyrus;">
+                            <div class="card-body">
+                            <h5 class="card-title" style="font-size: xx-large; font-weight: bold;">{{ item.name }}</h5>
+                            <p class="card-text" style="font-size: large; font-weight: bold;">Race: {{ item.race }}</p>
+                            <p class="card-text"style="font-size: large; font-weight: bold;">Class: {{ item.clas }} | Level: {{ item.level }}</p>
+                            <a href="/sheet/{{ item.id }}" class="card-link" style="font-size: large; font-weight: bold;">Open Character Sheet</a>
+                            </div>
+                        </div>
+                    </div>
+                {%endfor%}
+              </div>          
             </div>
-            {%endfor%}
-            </div>
-
-
         </div>
 
         <div style=" background-color: transparent; justify-content: center; display: flex;" class="pt-3 col-md-12">
