--- a/templates/home.html
+++ b/templates/home.html
@@ -24,6 +24,7 @@
                             <p class="card-text"style="font-size: large; font-weight: bold;">Class: {{ item.clas }}</p>
                             <p class="card-text"style="font-size: large; font-weight: bold;">Level: {{ item.level }}</p>
                             <a href="/sheet/{{ item.id }}" class="card-link" style="font-size: large; font-weight: bold;">Open Character Sheet</a>
+                            <a href="delete/{{item.id}}"class="card-link" style="font-size: large; font-weight: bold;"> Delete Character Sheet</a>
                             </div>
                         </div>
                     </div>
