--- a/templates/account/signup.html
+++ b/templates/account/signup.html
@@ -2,7 +2,7 @@
 
 {% load crispy_forms_tags %}
 
-{% block title %}Cadastro{% endblock %}
+{% block title %}Register{% endblock %}
 
 {% block content %} 
     <div class="col-md-12">
