--- a/templates/password/password_reset.html
+++ b/templates/password/password_reset.html
@@ -2,19 +2,24 @@
 
 
 {% block content %}
+	<div class="col-md-12">
+        <div style="background-color: rgb(250,244,209); border-radius: 3px; box-shadow: 1,1,1,1;text-align: left;margin-topleft: 50px; padding-bottom: 50px;  "class="home-ground ">
+            <div style=" background-color: rgb(250,244,209); justify-content: center; display: flex;" class="pt-3 col-md-12">
+                <!--<h2 class="col-md-4">Cadastro</h2>-->
+                <div class="col-md-12">
+				{% load crispy_forms_tags %}
+	          
 
-	{% load crispy_forms_tags %}          
-
-	<!--Reset Password-->
-	<div class="container p-5">
-  	 	<h2  style="color:rgb(250,244,209)" class="font-weight-bold mt-3">Redefinição de Senha</h2>
-		<hr>
-		<p style="color:rgb(250,244,209)">Esqueceu sua senha? Coloque seu e-mail abaixo, e nós mandaremos um e-mail com instruções para mudar sua senha.</p>
-        <form  style="color:rgb(250,244,209)" method="POST">
-            {% csrf_token %}
-            {{ password_reset_form|crispy }}                    
-            <button class="btn btn-primary" type="submit">Enviar E-mail</button>
-        </form>
-  	</div> 
+				<!--Reset Password-->
+				<div class="container p-5">
+					<h2  style="color:rgb(0,0,0)" class="font-weight-bold mt-3">Password Reset</h2>
+					<hr>
+					<p style="color:rgb(0,0,0)">Forgot your password? Enter your email below, and we will send you an email with instructions for changing your password.</p>
+					<form  style="color:rgb(0,0,0)" method="POST">
+						{% csrf_token %}
+						{{ password_reset_form|crispy }}                    
+						<button class="btn btn-primary" type="submit">Send Email</button>
+					</form>
+				</div> 
 
 {% endblock %}
