--- a/templates/password/password_reset_complete.html
+++ b/templates/password/password_reset_complete.html
@@ -1,13 +1,17 @@
 {% extends "base.html" %}
 
 {% block content %} 
-  
-  <!--Password Reset Complete-->
-    <div class="container p-4">
-	    <h2 class="font-weight-bold mt-3"> Redefinição de senha concluída </h2>
-		<hr>
-        <p>Sua senha foi alterada com sucesso. Agora você já pode entrar novamente.</p>                 
-        <a href="/accounts/login" class="btn btn-primary">Entrar</a>
-    </div>
+  div class="col-md-12">
+        <div style="background-color: rgb(250,244,209); border-radius: 3px; box-shadow: 1,1,1,1;text-align: left;margin-topleft: 50px; padding-bottom: 50px;  "class="home-ground ">
+            <div style=" background-color: rgb(250,244,209); justify-content: center; display: flex;" class="pt-3 col-md-12">
+                <!--<h2 class="col-md-4">Cadastro</h2>-->
+                <div class="col-md-12">
+                <!--Password Reset Complete-->
+                <div class="container p-4">
+                  <h2 class="font-weight-bold mt-3"> Password reset completed </h2>
+                <hr>
+                    <p>Your password has been changed successfully. Now you can log in again.</p>                 
+                    <a href="/accounts/login" class="btn btn-primary">Login</a>
+                </div>
 
 {% endblock %}
