--- a/templates/password/password_reset_confirm.html
+++ b/templates/password/password_reset_confirm.html
@@ -1,19 +1,24 @@
 {% extends "base.html" %}
 
 {% block content %}
-
-  {% load crispy_forms_tags %}  
-  
-  <!--Password Reset Confirm-->
-    <div class="container p-5">
-	    <h2 class="font-weight-bold mt-3">Confirmação de redefinição de senha</h2>
-		<hr>
-        <p>Por favor insira sua nova senha.</p>
-        <form method="POST">
-            {% csrf_token %}
-            {{ form|crispy }}                    
-            <button class="btn btn-primary" type="submit">Mudar Senha</button>
-        </form>
-    </div>
+    div class="col-md-12">
+        <div style="background-color: rgb(250,244,209); border-radius: 3px; box-shadow: 1,1,1,1;text-align: left;margin-topleft: 50px; padding-bottom: 50px;  "class="home-ground ">
+            <div style=" background-color: rgb(250,244,209); justify-content: center; display: flex;" class="pt-3 col-md-12">
+                <!--<h2 class="col-md-4">Cadastro</h2>-->
+                <div class="col-md-12">
+                {% load crispy_forms_tags %}  
+            
+            <!--Password Reset Confirm-->
+            
+                <div class="container p-5">
+                    <h2 class="font-weight-bold mt-3">Password Reset Confirmation</h2>
+                    <hr>
+                    <p>Please enter your new password.</p>
+                    <form method="POST">
+                        {% csrf_token %}
+                        {{ form|crispy }}                    
+                        <button class="btn btn-primary" type="submit">Change Password</button>
+                    </form>
+                </div>
 
 {% endblock %}
