--- a/templates/password/password_reset_done.html
+++ b/templates/password/password_reset_done.html
@@ -2,12 +2,16 @@
 
 
 {% block content %}
+	<div class="col-md-12">
+        <div style="background-color: rgb(250,244,209); border-radius: 3px; box-shadow: 1,1,1,1;text-align: left;margin-topleft: 50px; padding-bottom: 50px;  "class="home-ground ">
+            <div style=" background-color: rgb(250,244,209); justify-content: center; display: flex;" class="pt-3 col-md-12">
+                <!--<h2 class="col-md-4">Cadastro</h2>-->
+                <div class="col-md-12">
+				<!--Password reset sent-->
+				<div class="container p-5">
+				<h2 class="font-weight-bold mt-3">Password reset sent</h2>
+					<hr>
+					<p>We have sent an email with a link in order to reset your password.</p>
+			</div>
 
-	<!--Password reset sent-->
-	<div class="container p-5">
-  	<h2 class="font-weight-bold mt-3">Redefnição de senha enviada</h2>
-		<hr>
-		<p>Enviamos por e-mail instruções para redefinir sua senha. Você deve recebê-lo em breve. Se você não receber um e-mail certifique-se de inserir o endereço com o qual você se registrou e verifique sua caixa de spam.</p>
-  </div>
-
-{% endblock %}
+{% endblock %}	
