--- a/templates/text_name.html
+++ b/templates/text_name.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}                   <!-- Traz todo o conteudo de "base.html" pra ca -->
 
-{% block title %}Loja Python{% endblock %}  <!-- Muda o titulo da pagina -->
+{% block title %}LetsRoll{% endblock %}  <!-- Muda o titulo da pagina -->
 
 {% block content %}
 <style>
