--- a/templates/base.html
+++ b/templates/base.html
@@ -108,7 +108,7 @@
                             <a class="nav-link">User: {{user.username}}</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="{% url 'account_logout' %}" style="text-align-last: right;">Exit</a>
+                            <a class="nav-link" href="{% url 'account_logout' %}" style="text-align-last: right;">Logout</a>
                         </li>
                     {% else %}
                         <li class="nav-item">
