--- a/templates/radio.html
+++ b/templates/radio.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 <!-- Traz todo o conteudo de "base.html" pra ca -->
 
-{% block title %}Loja Python{% endblock %}
+{% block title %}Lets Roll{% endblock %}
 <!-- Muda o titulo da pagina -->
 
 {% block content %}
