--- a/templates/socialaccount/login_cancelled.html
+++ b/templates/socialaccount/login_cancelled.html
@@ -5,11 +5,16 @@
 {% block head_title %}{% trans "Login Cancelled" %}{% endblock %}
 
 {% block content %}
+    div class="col-md-12">
+            <div style="background-color: rgb(250,244,209); border-radius: 3px; box-shadow: 1,1,1,1;text-align: left;margin-topleft: 50px; padding-bottom: 50px;  "class="home-ground ">
+                <div style=" background-color: rgb(250,244,209); justify-content: center; display: flex;" class="pt-3 col-md-12">
+                    <!--<h2 class="col-md-4">Cadastro</h2>-->
+                    <div class="col-md-12">
 
-<h1>{% trans "Login Cancelled" %}</h1>
+                    <h1>{% trans "Login Cancelled" %}</h1>
 
-{% url 'account_login' as login_url %}
+                    {% url 'account_login' as login_url %}
 
-<p>{% blocktrans %}Você decidiu cancelar a entrada no nosso site usando sua conta do facebook. Se isto foi um erro, clique para <a href="{{login_url}}">entrar</a>.{% endblocktrans %}</p>
+                    <p>{% blocktrans %}You have decided to unsubscribe from our site using your facebook account. If this was an error, click to <a href="{{login_url}}">sigin</a>.{% endblocktrans %}</p>
 
 {% endblock %}
