--- a/templates/socialaccount/signup.html
+++ b/templates/socialaccount/signup.html
@@ -5,18 +5,23 @@
 {% block head_title %}{% trans "Signup" %}{% endblock %}
 
 {% block content %}
-    <h1>{% trans "Sign Up" %}</h1>
+  div class="col-md-12">
+        <div style="background-color: rgb(250,244,209); border-radius: 3px; box-shadow: 1,1,1,1;text-align: left;margin-topleft: 50px; padding-bottom: 50px;  "class="home-ground ">
+            <div style=" background-color: rgb(250,244,209); justify-content: center; display: flex;" class="pt-3 col-md-12">
+                <!--<h2 class="col-md-4">Cadastro</h2>-->
+                <div class="col-md-12">
+                <h1>{% trans "Sign Up" %}</h1>
 
-<p>{% blocktrans with provider_name=account.get_provider.name site_name=site.name %}Você está prestes a usar sua conta do {{provider_name}} para acessar o
-{{site_name}}. Preencha os seguintes campos para finalizar seu cadastro:{% endblocktrans %}</p>
+                <p>{% blocktrans with provider_name=account.get_provider.name site_name=site.name %}You are about to use your account from {{provider_name}} to access the
+                {{site_name}}. Fill in the following fields to complete your registration:{% endblocktrans %}</p>
 
-<form class="signup" id="signup_form" method="post" action="{% url 'socialaccount_signup' %}">
-  {% csrf_token %}
-  {{ form.as_p }}
-  {% if redirect_field_value %}
-  <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
-  {% endif %}
-  <button type="submit">{% trans "Sign Up" %} &raquo;</button>
-</form>
+                <form class="signup" id="signup_form" method="post" action="{% url 'socialaccount_signup' %}">
+                  {% csrf_token %}
+                  {{ form.as_p }}
+                  {% if redirect_field_value %}
+                  <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
+                  {% endif %}
+                  <button type="submit">{% trans "Sign Up" %} &raquo;</button>
+                </form>
 
 {% endblock %}
